# scipp

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  ToDO  build.sh  doc.sh  docs.sh  gmon.out  measurements.out  sci++.hpp
.github/workflows/: cmake.yml  jekyll-gh-pages.yml  pages.yml
bench/: CMakeLists.txt  bench.cpp  bench2.cpp  dot_prod.cpp  meas_prod.cpp
benchmark/: CMakeLists.txt  integral.cpp
benchmark/op/: CMakeLists.txt  built_in.cpp  double.cpp  measurement.cpp
doc/: Doxyfile  _config.yml  index.md
doc/math/: autodiff.md  calculus.md  operations.md
doc/physics/: measurements.md
docs/: CNAME  Doxyfile  Gemfile  _config.yml  index.md  math.md  physics.md
docs/geometry/: index.md
docs/math/: autodiff.md  calculus.md  curves.md  expressions.md  functions.md  index.md  integrals.md  operations.md  variables.md
docs/physics/: index.md  measurements.md
examples/: CMakeLists.txt  HelloWorld.cpp  autodiff.cpp  curves.cpp  derivative.cpp  integral.cpp  measurements.cpp  plot.cpp
geometry/include/: geometry.hpp
include/: sci++.hpp
include/geometry/: linspace.hpp  matrix.hpp  vector.hpp
include/math/: bessel.hpp  constants.hpp  function.hpp  hermite_polynomial.hpp  integral.hpp  ode_solver.hpp  statistics.hpp
include/physics/: vector_types.hpp
include/tools/: copy_counter.hpp  io.hpp  timer.hpp
math/: CMakeLists.txt  statistics.hpp
math/calculus/: variables.hpp
math/calculus/curves/: interval.hpp  sphere.hpp
math/calculus/integrals/: curvilinear.hpp  endpoint.hpp  rectangle.hpp  simpson.hpp
math/include/: math.hpp
math/operations/: operators.hpp
math/operations/algebraic/: add.hpp  negate.hpp
math/operations/mathematical/: logarithm.hpp  sign.hpp
math/polynomials/: hermite.hpp  polynomial.hpp  roots.hpp
math/src/: constants.hpp  op.hpp  statistics.hpp
meta_scipp/: CMakeLists.txt
meta_scipp/include/: sci++.hpp
meta_scipp/test/: CMakeLists.txt  integral.cpp  measurement.cpp
old_scipp/: CMakeLists.txt  build.sh  physim.hpp
old_scipp/include/: sci++.hpp
old_scipp/test/: integrals.cpp  measurement.cpp  meta_units.cpp  note.txt
physics/: CMakeLists.txt  vector_types.hpp
physics/include/: physics.hpp
physics/measurements/: umeasurement.hpp
physics/measurements/types/: measurements.hpp
physics/src/: constants.hpp  mass.hpp  position.hpp
physics/test/: Makefile  root_plot.cpp  solar.cpp  solar_system.hpp
plot/: CMakeLists.txt  bessel.cpp  hermite.cpp  quiver.cpp
release_test/: CMakeLists.txt
release_test/geometry/: CMakeLists.txt  linear_algebra.cpp
release_test/physics/: measurements.cpp
release_test/traits/: CMakeLists.txt  traits.cpp
scipp/: sci++.hpp  scipp
scipp/WIP/: eigen  hilbert_space.hpp  jacobi.hpp  linear_regression.hpp
scipp/geometry/: curve_types.hpp  linspace.hpp  matrix.hpp  traits.hpp  vector.hpp  vectorial_base.hpp
scipp/math/: autodiff.hpp  constants.hpp  dual.hpp  operators.hpp  ops.hpp  statistics.hpp  template.hpp  traits.hpp
scipp/minitrash/: bench.hpp  curve_types.hpp  derivative.hpp  line.hpp  set.hpp
scipp/physics/: base_quantity.hpp  constants.hpp  hamiltonian.hpp  kinetic_energy.hpp  lagrangian.hpp  material_point.hpp  measurement.hpp  potential_energy.hpp  traits.hpp  vector_types.hpp
scipp/tools/: bench.hpp  io.hpp  meta.hpp  plot.hpp  timer.hpp
scipp/traits/: geometry.hpp  math.hpp  physics.hpp
src/geometry/: CMakeLists.txt  basis.hpp  matrix.hpp  row_vector.hpp  vector.hpp
src/geometry/include/: geometry.hpp
src/geometry/src/linear_algebra/: matrix.hpp  orthonormal_base.hpp  vector.hpp
src/math/: CMakeLists.txt  constants.hpp  equations.hpp  integral.hpp  measurement_op.hpp  statistics.hpp  umeasurement_op.hpp  vector.hpp
src/measurements/: CMakeLists.txt  measurement.hpp  measurements_types.hpp  meta_units.hpp  umeasurement.hpp  umeasurements_types.hpp  unit.hpp  unit_base.hpp  units.hpp  units_types.hpp
src/measurements/include/: measurements.hpp
src/measurements/src/: umeasurement.hpp  units.hpp  utilities.hpp
src/measurements/test/: macro_types.cpp  meas.cpp  size.cpp
src/meta_measurements/: base.hpp  prefix.hpp  unit.hpp
src/physics/: base_quantity.hpp  constants.hpp  coord_sys.hpp  gravitational_field.hpp  mass.hpp  measurement.hpp  measurement_types.hpp  measurements.hpp  measurements_traits.hpp  measurements_types.hpp  prefix.hpp  timer.hpp  umeasurement.hpp  unit.hpp  units.hpp  units_litterals.hpp  vector_types.hpp
src/tools/: CMakeLists.txt  reader.hpp  timer.hpp
src2/geometry/: matrix.hpp  vector.hpp
src2/math/: integral.hpp
src2/physics/: constants.hpp
test/: CMakeLists.txt  bench.cpp  complex.cpp  copy_counter.cpp  derivatives.cpp  geometry.cpp  hello_world.cpp  hermite.cpp  integral.cpp  main.cpp  mass.cpp  matrix.cpp  meas.cpp  measurement.cpp  measurements.cpp  meta_units.cpp  note.txt  position.cpp  sizes.cpp  statistics.cpp  unit_base.cpp  vec.cpp  vector.cpp  vector_types.cpp
test/autodiff/: CMakeLists.txt  func.cpp  hamiltonian.cpp  op.cpp  var.cpp
test/bench/: bench.cpp  bench2.cpp  timer_overhead.cpp
test/geometry/: CMakeLists.txt  geometry.cpp  linear_algebra.cpp  pol.cpp
test/math/: CMakeLists.txt  complex.cpp  curvilinear.cpp  derivatives.cpp  dual.cpp  function.cpp  functions.cpp  gauss.cpp  integral.cpp  integrals.cpp  lin_reg.cpp  meta.cpp  mobius.cpp  poly.cpp  polynomials.cpp  statistics.cpp  taylor.cpp  variables.cpp
test/physics/: CMakeLists.txt  curves.cpp  hamiltonian.cpp  measurements.cpp  multidim.cpp  point.cpp  potentials.cpp  spring.cpp  termo.cpp
test/traits/: traits.cpp
test2/: CMakeLists.txt
test2/geometry/: eigen.cpp  matrix.cpp  vector.cpp
test2/math/: CMakeLists.txt  dual.cpp  function.cpp  gauss.cpp  meta.cpp  (+1 more)
tools/: CMakeLists.txt  meta.hpp  timer.hpp
tools/include/: tools.hpp
tools/src/: bench.hpp  timer.hpp
traits/: geometry.hpp  math.hpp
trash/: _config.yml  base_quantity_io.cpp  bessel.hpp  cmeasurement.hpp  dual.h  generic_measurement_traits.hpp  integrals.hpp  matrix.hpp  node.hpp  physim.hpp  row_vector.hpp  subtract.hpp  tuple.hpp
(+471 files in other folders)
